--- a/css/bicicletas/bicicletas-lista.css
+++ b/css/bicicletas/bicicletas-lista.css
@@ -17,6 +17,10 @@
   overflow-x: auto;
 }
 
+#bicicleta .bicicletas-lista ul {
+  padding: 0px 0px 20px 0px;
+}
+
 .bicicletas-lista li {
   flex: 1;
   min-width: 280px;
@@ -35,6 +39,7 @@
   display: flex;
   align-items: center;
 }
+
 .bicicletas-lista h3::before {
   content: "";
   display: inline-block;
