--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,6 +1,6 @@
 .introducao-bg {
-  background-color: var(--cor-12);
-  color: var(--cor-0);
+  background: var(--cor-12) url("../../img/dec/bottom-left.svg") no-repeat
+    bottom 160px left 20px;
   box-shadow: inset 0 -120px var(--cor-0);
 }
 
@@ -24,10 +24,6 @@
 
 .introducao h1 {
   margin-bottom: 32px;
-  font-size: 64px;
-  line-height: 1.125;
-  font-family: "Poppins";
-  font-weight: 600;
 }
 
 .introducao p {
