--- a/css/utilidades/formulario.css
+++ b/css/utilidades/formulario.css
@@ -35,7 +35,7 @@
   box-shadow: 0 0 0 2px #fea;
 }
 
-@media (max-width: 600) {
+@media (max-width: 600px) {
   .form {
     grid-template-columns: 1fr;
   }
